--- a/sections/hero-section.liquid
+++ b/sections/hero-section.liquid
@@ -45,7 +45,7 @@
       "type": "block",
       "settings": [
         {
-          "type": "url",
+          "type": "image_picker",
           "id": "hero_background_image",
           "label": "Background Image"
         },
