--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -43,6 +43,7 @@
     <link href="{{ 'nice-select.css' | asset_url }}" rel="stylesheet">
     <link href="{{ 'odometer-theme-default.css' | asset_url }}" rel="stylesheet">
     <link href="{{ 'style.css' | asset_url }}" rel="stylesheet">
+    <link href="{{ 'custom.css' | asset_url }}" rel="stylesheet">
 
     {{ content_for_header }}
   </head>
