--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -44,6 +44,7 @@
     <link href="{{ 'odometer-theme-default.css' | asset_url }}" rel="stylesheet">
     <link href="{{ 'style.css' | asset_url }}" rel="stylesheet">
     <link href="{{ 'custom.css' | asset_url }}" rel="stylesheet">
+    <script src="{{ 'global.js' | asset_url }}" defer></script>
 
     {{ content_for_header }}
   </head>
