--- a/assets/style.css
+++ b/assets/style.css
@@ -3249,7 +3249,7 @@ img {
   text-align: center;
   margin-bottom: 40px;
 }
-.details-wrap .details-img {
+.details-wrap img {
   box-shadow: 0px 2px 12px 2px rgba(4, 0, 52, 0.1);
   padding: 20px 15px;
   border-radius: 10px;
