--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -16,37 +16,39 @@
           </div>
           <div class="col-lg-1 col-md-6 col-6">
             <div class="navbar-header">
-              <a class="navbar-brand" href="index.html"><img src="assets/logo.png" alt="logo"></a>
+              {% if section.settings.logo != blank %}
+                <a class="navbar-brand" href="/"
+                  ><img src="{{ section.settings.logo |  image_url: width: 400 }}" width="" height="" alt="logo"
+                ></a>
+              {% else %}
+                <a class="navbar-brand" href="/"
+                  ><img src="{{ 'logo.png' | asset_url }}" alt="logo" width="" height=""
+                ></a>
+              {% endif %}
             </div>
           </div>
           <div class="col-lg-9 col-md-1 col-1">
             <div id="navbar" class="collapse navbar-collapse navigation-holder">
               <button class="menu-close"><i class="ti-close"></i></button>
               <ul class="nav navbar-nav mb-2 mb-lg-0">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About Us</a></li>
-                <li class="menu-item-has-children">
-                  <a href="#">Products</a>
-                  <ul class="sub-menu">
-                    <li><a href="product-single.html">WANKO SL-Track Zero Gravity Full Body Recliner Massage</a></li>
-                    <li>
-                      <a href="product-single.html">WANKO SL-Track Zero Gravity Full Body Recliner Massage Chair</a>
+                {% for link in linklists[section.settings.menu].links %}
+                  {% if link.links.size > 0 %}
+                    <li class="menu-item-has-children">
+                      <a href="{{ link.url }}">{{ link.title }}</a>
+                      <ul class="sub-menu">
+                        {% for child_link in link.links %}
+                          <li>
+                            <a href="{{ child_link.url }}">{{ child_link.title }}</a>
+                          </li>
+                        {% endfor %}
+                      </ul>
                     </li>
+                  {% else %}
                     <li>
-                      <a href="product-single.html">WANKO SL-Track Zero Gravity Full Body Recliner Massage Chair</a>
+                      <a href="{{ link.url }}">{{ link.title }}</a>
                     </li>
-                    <li>
-                      <a href="product-single.html">WANKO SL-Track Zero Gravity Full Body-Recliner Massage Chair</a>
-                    </li>
-                    <li>
-                      <a href="product-single.html">WANKO Zero Gravity Full Body Massage Chair Wireless Music-Sync</a>
-                    </li>
-                  </ul>
-                </li>
-                <li><a href="warranty-coverage.html">Warranty Coverage</a></li>
-                <li><a href="return-policy.html">Return Policy</a></li>
-                <li><a href="shipping-policy.html">Shipping Policy</a></li>
-                <li><a href="faq.html">FAQ</a></li>
+                  {% endif %}
+                {% endfor %}
               </ul>
             </div>
             <!-- end of nav-collapse -->
@@ -89,76 +91,89 @@
                 <button class="cart-toggle-btn">
                   <i class="fi flaticon-add-to-cart"></i>
                   <span
-                    class="cart-count"
-                    >2</span
+                    class="cart-count cartCount"
                   >
+                    {{- cart.item_count -}}
+                  </span>
                 </button>
                 <div class="mini-cart-content">
                   <div class="title"></div>
                   <button class="mini-cart-close"><i class="ti-close"></i></button>
                   <div class="mini-cart-items">
-                    <p class="top-p">Your Cart (1)</p>
+                    <p class="top-p">
+                      Your Cart (<span class="cartCount">{{ cart.item_count }}</span>)
+                    </p>
 
-                    <div
-                      class="mini-cart-item clearfix"
-                      data-bs-toggle="modal"
-                      data-bs-target="#popup-quickview"
-                    >
-                      <div class="mini-cart-item-image">
-                        <a href="shop.html"><img src="assets/product-1.webp" alt></a>
-                      </div>
-                      <div class="mini-cart-item-des">
-                        <h4><a href="product-single.html">SL-Track</a></h4>
-                        <ul class="product-text-sub">
-                          <li>Black</li>
-                        </ul>
-                        <a href="#" class="dlt-btn"><i class="ti-trash"></i></a>
-                      </div>
-                      <div class="pro-single-btn">
-                        <span class="price">$200.00</span>
-                        <div class="quantity cart-plus-minus">
-                          <input type="text" value="1">
-                          <div class="dec qtybutton"></div>
-                          <div class="inc qtybutton"></div>
-                          <div class="dec qtybutton">-</div>
-                          <div class="inc qtybutton">+</div>
+                    <div class="mini-cart-item clearfix" id="mini-cart">
+                      {% for item in cart.items %}
+                        <div class="mini-cart-item clearfix">
+                          <div class="mini-cart-item-image">
+                            <a href="{{ item.url }}"
+                              ><img
+                                src="{{ item.image |  image_url: width: 300  }}"
+                                alt=""
+                                width=""
+                                height=""
+                            ></a>
+                          </div>
+                          <div class="mini-cart-item-des">
+                            <div class="mini-cart-item-des-top">
+                              <h4>
+                                <a href="{{ item.url }}">{{ item.title }}</a>
+                              </h4>
+                              <ul class="product-text-sub">
+                                <li>Black</li>
+                              </ul>
+                            </div>
+                            <span class="price">
+                              {{- cart.currency.symbol -}}
+                              {{- item.price | money_without_currency -}}
+                            </span>
+                          </div>
+                          <div class="pro-single-btn">
+                            <div class="quantity ">
+                              <input type="text" value="{{ item.quantity }}">
+                              <div class="dec qtybutton"></div>
+                              <div class="inc qtybutton"></div>
+                              <div
+                                class="dec qtybutton"
+                                onclick="updateValue({{forloop.index}}, {{ item.quantity }}, 'dec')"
+                              >
+                                -
+                              </div>
+                              <div
+                                class="inc qtybutton"
+                                onclick="updateValue({{forloop.index}}, {{ item.quantity }}, 'inc')"
+                              >
+                                +
+                              </div>
+                            </div>
+                            <a
+                              href="#"
+                              class="dlt-btn"
+                              onclick="removeCartItem({{forloop.index}})"
+                            >
+                              <i class="ti-trash"></i>
+                            </a>
+                          </div>
                         </div>
-                      </div>
-                    </div>
-                    <div
-                      class="mini-cart-item clearfix"
-                      data-bs-toggle="modal"
-                      data-bs-target="#popup-quickview"
-                    >
-                      <div class="mini-cart-item-image">
-                        <a href="shop.html"><img src="assets/product-2.webp" alt></a>
-                      </div>
-                      <div class="mini-cart-item-des">
-                        <h4><a href="product-single.html">SL-Track</a></h4>
-                        <ul class="product-text-sub">
-                          <li>Black</li>
-                        </ul>
-                        <a href="#" class="dlt-btn"><i class="ti-trash"></i></a>
-                      </div>
-                      <div class="pro-single-btn">
-                        <span class="price">$200.00</span>
-                        <div class="quantity cart-plus-minus">
-                          <input type="text" value="1">
-                          <div class="dec qtybutton"></div>
-                          <div class="inc qtybutton"></div>
-                          <div class="dec qtybutton">-</div>
-                          <div class="inc qtybutton">+</div>
-                        </div>
-                      </div>
+                      {% endfor %}
                     </div>
                   </div>
                   <div class="mini-cart-action clearfix">
                     <ul>
-                      <li>Subtotal(2 items)</li>
-                      <li><strong>$68,000</strong></li>
+                      <li>
+                        Subtotal (<span class="cartCount">{{ cart.item_count }}</span> items)
+                      </li>
+                      <li>
+                        <strong>
+                          {{ cart.currency.symbol }}
+                          <span id="subtotalAmount">{{ cart.items_subtotal_price | money_without_currency }}</span>
+                        </strong>
+                      </li>
                     </ul>
                     <div class="mini-btn">
-                      <a href="checkout.html" class="view-cart-btn">CONTINUE TO CHECKOUT</a>
+                      <a href="/checkout" class="view-cart-btn">CONTINUE TO CHECKOUT</a>
                     </div>
                   </div>
                 </div>
@@ -171,3 +186,26 @@
     </nav>
   </div>
 </header>
+
+{% schema %}
+{
+  "name": "Header Section",
+  "settings": [
+    {
+      "type": "image_picker",
+      "id": "logo",
+      "label": "Logo"
+    },
+    {
+      "type": "link_list",
+      "id": "menu",
+      "label": "Menu"
+    }
+  ],
+  "presets": [
+    {
+      "name": "Header Section"
+    }
+  ]
+}
+{% endschema %}
