--- a/assets/style.css
+++ b/assets/style.css
@@ -1419,7 +1419,6 @@ img {
   right: 0;
   transform: scale(1);
 }
-
 .mini-cart .cart-count {
   background: #d1af1e;
   width: 19px;
@@ -1435,9 +1434,10 @@ img {
 }
 
 .mini-cart-content {
-  background: #08193a;
+  background: #fff;
   width: 400px;
-  height: 100%;
+  height: 100vh;
+  min-height: 450px;
   z-index: 100;
   position: fixed;
   right: -400px;
@@ -1450,7 +1450,6 @@ img {
   -ms-transition: all 0.5s;
   transition: all 0.5s;
   box-shadow: -2px 10px 15px -9px rgb(153, 153, 153);
-  height: 100vh;
 }
 @media (max-width: 575px) {
   .mini-cart-content {
@@ -1467,14 +1466,12 @@ img {
   font-weight: 400;
   line-height: normal;
   text-transform: uppercase;
-  font-family: 'Prompt', sans-serif;
+  font-family: 'Inter', sans-serif;
 }
 .mini-cart-content .mini-cart-close {
   display: block;
-  width: 40px;
-  height: 40px;
-  background-color: rgb(51, 51, 51);
-  color: rgb(255, 255, 255);
+  background: none;
+  color: #000;
   font-size: 0px;
   text-align: center;
   overflow: hidden;
@@ -1482,11 +1479,11 @@ img {
   float: right;
   line-height: 54px;
   border-radius: 3px;
-  right: 10px;
-  top: -15px;
+  right: 20px;
+  top: 5px;
 }
 .mini-cart-content .mini-cart-close i {
-  font-size: 15px;
+  font-size: 25px;
 }
 .mini-cart-content .mini-cart-items {
   padding: 30px 20px 25px;
@@ -1501,7 +1498,7 @@ img {
   font-weight: 400;
   line-height: 130%;
   margin-bottom: 30px;
-  color: #fff;
+  color: #000;
 }
 .mini-cart-content .mini-cart-items::-webkit-scrollbar {
   width: 6px;
@@ -1526,6 +1523,8 @@ img {
 .mini-cart-content .mini-cart-item-des {
   position: relative;
   overflow: hidden;
+  display: flex;
+  justify-content: space-between;
 }
 .mini-cart-content .mini-cart-item-des h4 {
   font-size: 15px;
@@ -1533,10 +1532,10 @@ img {
   font-weight: 400;
   line-height: 100%;
   margin-top: 0px;
-  font-family: 'Prompt', sans-serif;
+  font-family: 'Inter', sans-serif;
 }
 .mini-cart-content .mini-cart-item-des h4 a {
-  color: #fff;
+  color: #000;
 }
 .mini-cart-content .mini-cart-item-des p {
   font-size: 15px;
@@ -1544,44 +1543,42 @@ img {
   font-weight: 300;
   line-height: 120%;
   text-transform: capitalize;
-  color: #e9e9e9;
+  color: #7f7f8a;
 }
 .mini-cart-content .mini-cart-item-des ul {
   display: flex;
   margin: 10px 0;
 }
 .mini-cart-content .mini-cart-item-des ul li {
-  font-size: 16px;
+  font-size: 12px;
   font-style: normal;
   font-weight: 400;
   line-height: 100%;
   text-transform: uppercase;
-  color: #e9e9e9;
+  color: #7f7f8a;
 }
 .mini-cart-content .mini-cart-item-des h3 {
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
   line-height: 100%;
-  font-family: 'Prompt', sans-serif;
+  font-family: 'Inter', sans-serif;
 }
-.mini-cart-content .mini-cart-item-des .dlt-btn {
+.mini-cart-content .dlt-btn {
   font-size: 18px;
-  color: #fff;
-  text-align: center;
-  position: absolute;
+  color: #171717;
   right: 0;
   top: 0;
+  margin-left: 10px;
 }
-.mini-cart-content .mini-cart-item-des .dlt-btn:hover {
-  color: #d1af1e;
+.mini-cart-content .dlt-btn:hover {
+  color: #171717;
 }
 .mini-cart-content .pro-single-btn {
   margin-top: 5px;
   display: flex;
   align-items: center;
   flex-wrap: wrap;
-  justify-content: space-between;
 }
 @media (max-width: 575px) {
   .mini-cart-content .pro-single-btn {
@@ -1593,7 +1590,7 @@ img {
   font-style: normal;
   font-weight: 400;
   line-height: 100%;
-  color: #08193a;
+  color: #000;
 }
 .mini-cart-content .pro-single-btn .quantity {
   margin-right: 10px;
@@ -1615,8 +1612,8 @@ img {
   font-weight: 400;
   border: none;
   position: relative;
-  border: 1.5px solid #fff;
-  color: #fff;
+  border: 1.5px solid #ebebeb;
+  color: #000;
 }
 @media (max-width: 575px) {
   .mini-cart-content .pro-single-btn .quantity input {
@@ -1634,8 +1631,8 @@ img {
   font-size: 18px;
   cursor: pointer;
   font-size: 25px;
-  border: 1.5px solid #fff;
-  color: #fff;
+  border: 1.5px solid #ebebeb;
+  color: #000;
 }
 .mini-cart-content .pro-single-btn .quantity .qtybutton.inc {
   right: 0px;
@@ -1646,15 +1643,15 @@ img {
   align-items: center;
   padding: 8px 20px;
   border: 1px solid #d9d9d9;
-  font-size: 16px;
+  font-size: 12px;
   font-style: normal;
   font-weight: 300;
   line-height: 100%;
   text-transform: uppercase;
-  color: #181818;
+  color: #171717;
 }
 .mini-cart-content .pro-single-btn .w-btn:hover {
-  background: #08193a;
+  background: #000;
   color: #fff;
 }
 .mini-cart-content .pro-single-btn .w-btn i {
@@ -1668,7 +1665,7 @@ img {
   bottom: 0;
   transform: translateX(-50%);
   width: 100%;
-  background: #08193a;
+  background: #fff;
   padding: 40px;
 }
 .mini-cart-content .mini-cart-action .theme-btn-s2 {
@@ -1683,7 +1680,6 @@ img {
   font-weight: 400;
   line-height: normal;
   margin-top: 15px;
-  color: #fff;
 }
 .mini-cart-content .mini-cart-action ul {
   display: flex;
@@ -1691,16 +1687,16 @@ img {
 }
 .mini-cart-content .mini-cart-action ul li {
   font-size: 16px;
-  color: #fff;
+  color: #000;
 }
 .mini-cart-content .mini-cart-action ul li strong {
-  color: #08193a;
+  color: #000;
 }
 .mini-cart-content .mini-cart-action .mini-checkout-price {
   font-size: 16px;
   font-size: 1.0666666667rem;
   font-weight: 600;
-  color: #181818;
+  color: #000;
   display: block;
   margin-bottom: 30px;
   display: flex;
