--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -6,8 +6,8 @@
           <div class="col-lg-6">
             <div class="newslatter-left">
               <div class="section-title">
-                <h2>Subscribe To Our Newsletter</h2>
-                <p>Subscribe now and enjoy an exclusive 20% discount!</p>
+                <h2>{{ section.settings.subscribe_title }}</h2>
+                <p>{{ section.settings.subscribe_description }}</p>
               </div>
             </div>
           </div>
@@ -25,53 +25,56 @@
         <div class="col col-xl-3 col-lg-3 col-md-4 col-sm-12 col-12">
           <div class="widget link-widget">
             <div class="widget-title">
-              <h3>Brands</h3>
+              <h3>{{ section.settings.brands_links_title }}</h3>
             </div>
             <ul>
-              <li><a href="#">Wanko Massage Chairs</a></li>
-              <li><a href="#">Wanko Massage Chairs</a></li>
-              <li><a href="#">Wanko Massage Chairs</a></li>
-              <li><a href="#">Wanko Massage Chairs</a></li>
+              {% for link in linklists[section.settings.brands_links].links %}
+                <li>
+                  <a href="{{ link.url }}">{{ link.title }}</a>
+                </li>
+              {% endfor %}
             </ul>
           </div>
         </div>
         <div class="col col-xl-3 col-lg-3 col-sm-12 col-12">
           <div class="widget link-widget">
             <div class="widget-title">
-              <h3>Categories</h3>
+              <h3>{{ section.settings.categories_title }}</h3>
             </div>
             <ul>
-              <li><a href="#">New</a></li>
-              <li><a href="#">Best Seller</a></li>
-              <li><a href="#">Relaxation</a></li>
+              {% for link in linklists[section.settings.categories_links].links %}
+                <li>
+                  <a href="{{ link.url }}">{{ link.title }}</a>
+                </li>
+              {% endfor %}
             </ul>
           </div>
         </div>
         <div class="col col-xl-3 col-lg-3 col-sm-12 col-12">
           <div class="widget link-widget custom">
             <div class="widget-title">
-              <h3>Navigate</h3>
+              <h3>{{ section.settings.navigate_title }}</h3>
             </div>
             <ul>
-              <li><a href="#">About Us</a></li>
-              <li><a href="#">Privacy Policy</a></li>
-              <li><a href="#">Return Policy</a></li>
-              <li><a href="#">Shipping Policy</a></li>
-              <li><a href="#">Terms Of Service</a></li>
-              <li><a href="#">Warranty Coverage</a></li>
-              <li><a href="#">Warranty Registration</a></li>
+              {% for link in linklists[section.settings.navigate_links].links %}
+                <li>
+                  <a href="{{ link.url }}">{{ link.title }}</a>
+                </li>
+              {% endfor %}
             </ul>
           </div>
         </div>
         <div class="col col-xl-3 col-lg-3 col-sm-12 col-12">
           <div class="widget link-widget custom">
             <div class="widget-title">
-              <h3>Support</h3>
+              <h3>{{ section.settings.support_title }}</h3>
             </div>
             <ul>
-              <li><a href="#">Warranty Coverage</a></li>
-              <li><a href="#">Warranty Registration</a></li>
-              <li><a href="#">Contact Us</a></li>
+              {% for link in linklists[section.settings.support_links].links %}
+                <li>
+                  <a href="{{ link.url }}">{{ link.title }}</a>
+                </li>
+              {% endfor %}
             </ul>
           </div>
         </div>
@@ -83,31 +86,135 @@
     <div class="container">
       <div class="row align-items-center">
         <div class="copy-wrap">
-          <p>Follow Us On Social Media</p>
+          <p>{{ section.settings.social_media_text }}</p>
           <ul class="social">
-            <li>
-              <a href="#">
-                <i class="ti-facebook"></i>
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <i class="ti-twitter-alt"></i>
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <i class="ti-linkedin"></i>
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <i class="ti-instagram"></i>
-              </a>
-            </li>
+            {% if section.settings.facebook_link != blank %}
+              <li>
+                <a href="{{ section.settings.facebook_link }}">
+                  <i class="ti-facebook"></i>
+                </a>
+              </li>
+            {% endif %}
+            {% if section.settings.twitter_link != blank %}
+              <li>
+                <a href="{{ section.settings.twitter_link }}">
+                  <i class="ti-twitter-alt"></i>
+                </a>
+              </li>
+            {% endif %}
+            {% if section.settings.linkedin_link != blank %}
+              <li>
+                <a href="{{ section.settings.linkedin_link }}">
+                  <i class="ti-linkedin"></i>
+                </a>
+              </li>
+            {% endif %}
+            {% if section.settings.instagram_link != blank %}
+              <li>
+                <a href="{{ section.settings.instagram_link }}">
+                  <i class="ti-instagram"></i>
+                </a>
+              </li>
+            {% endif %}
           </ul>
         </div>
       </div>
     </div>
   </div>
 </footer>
+
+{% schema %}
+{
+  "name": "Footer Section",
+  "settings": [
+    {
+      "type": "text",
+      "id": "subscribe_title",
+      "label": "Subscribe Title",
+      "default": "Subscribe To Our Newsletter"
+    },
+    {
+      "type": "text",
+      "id": "subscribe_description",
+      "label": "Subscribe Description",
+      "default": "Subscribe now and enjoy an exclusive 20% discount!"
+    },
+    {
+      "type": "text",
+      "id": "brands_links_title",
+      "label": "Brands Title",
+      "default": "Brands"
+    },
+    {
+      "type": "link_list",
+      "id": "brands_links",
+      "label": "Brands Links"
+    },
+    {
+      "type": "text",
+      "id": "categories_title",
+      "label": "Categories Title",
+      "default": "Categories"
+    },
+    {
+      "type": "link_list",
+      "id": "categories_links",
+      "label": "Categories Links"
+    },
+    {
+      "type": "text",
+      "id": "navigate_title",
+      "label": "Navigate Title",
+      "default": "Navigate"
+    },
+    {
+      "type": "link_list",
+      "id": "navigate_links",
+      "label": "Navigate Links"
+    },
+    {
+      "type": "text",
+      "id": "support_title",
+      "label": "Support Title",
+      "default": "Support"
+    },
+    {
+      "type": "link_list",
+      "id": "support_links",
+      "label": "Support Links"
+    },
+    {
+      "type": "text",
+      "id": "social_media_text",
+      "label": "Social Media Text",
+      "default": "Follow Us On Social Media"
+    },
+    {
+      "type": "url",
+      "id": "facebook_link",
+      "label": "Facebook Link"
+    },
+    {
+      "type": "url",
+      "id": "twitter_link",
+      "label": "Twitter Link"
+    },
+    {
+      "type": "url",
+      "id": "linkedin_link",
+      "label": "Linkedin Link"
+    },
+    {
+      "type": "url",
+      "id": "instagram_link",
+      "label": "Instagram Link"
+    }
+  ],
+
+  "presets": [
+    {
+      "name": "Footer Section"
+    }
+  ]
+}
+{% endschema %}
