--- a/assets/style.css
+++ b/assets/style.css
@@ -2943,10 +2943,9 @@ img {
     text-align: center;
   }
 }
-.features-section .features-item i {
-  font-size: 34px;
+.features-section .features-item img {
+  width: 34px;
   margin-bottom: 32px;
-  color: #08193a;
 }
 .features-section .features-item h3 {
   font-size: 24px;
